# hyperdrive

./: .gitignore  CMakeLists.txt  hyperdriveconfig.h.in
cmake/modules/: FindSystemd.cmake
discoveryservices/: CMakeLists.txt  discoveryservices.h
discoveryservices/avahi/: CMakeLists.txt  avahi.json  avahidiscovery.cpp  avahidiscovery.h
discoveryservices/hyperdiscovery/: CMakeLists.txt  hyperdiscovery.cpp  hyperdiscovery.h  hyperdrive-discoveryservice-hyperdiscovery.service.in  hyperdrive-discoveryservice-hyperdiscovery.socket  service.h
hyperdrive/: CMakeLists.txt  hyperdrive-home.conf  hyperdrive.service.in  hyperdrive.socket  main.cpp
lib/: CMakeLists.txt  cachemessage.cpp  cachemessage.h  hyperdrivecache.cpp  hyperdrivecache.h  hyperdrivecore.cpp  hyperdrivecore.h  hyperdrivedatabasemanager.cpp  hyperdrivedatabasemanager.h  hyperdrivediscoverymanager.cpp  hyperdrivediscoverymanager.h  hyperdrivediscoveryservice.cpp  hyperdrivediscoveryservice.h  hyperdrivediscoveryservice_p.h  hyperdriveinterface.cpp  hyperdriveinterface.h  hyperdrivelocaldiscoveryservice.cpp  hyperdrivelocaldiscoveryservice.h  hyperdrivelocaldiscoveryservice_p.h  hyperdrivelocalserver.cpp  hyperdrivelocalserver.h  hyperdrivelocaltransport.cpp  hyperdrivelocaltransport.h  hyperdrivelocaltransport_p.h  hyperdriveprotocol.h  hyperdriveremotediscoveryservice.cpp  hyperdriveremotediscoveryservice.h  hyperdriveremotediscoveryservice_p.h  hyperdriveremotediscoveryserviceinterface.cpp  hyperdriveremotediscoveryserviceinterface.h  hyperdriveremotediscoveryserviceinterface_p.h  hyperdriveremotetransport.cpp  hyperdriveremotetransport.h  hyperdriveremotetransportinterface.cpp  hyperdriveremotetransportinterface.h  hyperdrivesecuritymanager.cpp  hyperdrivesecuritymanager.h  hyperdrivesecuritypassfactory.cpp  hyperdrivesecuritypassfactory.h  hyperdrivesecuritytokenmanager.cpp  (+8 more)
lib/db/migrations/: 001_create_producer_properties.sql  002_create_consumer_properties.sql
share/dbus/: com.ispirata.Hemera.Hyperdrive.xml
transports/: CMakeLists.txt  transports.h
transports/astarte/: CMakeLists.txt  astartetransport.cpp  astartetransport.h  astartetransportcache.cpp  astartetransportcache.h  hyperdrive-transport-astarte-home.conf  hyperdrive-transport-astarte.service.in
transports/astarte/gateway-pairing-helper/: CMakeLists.txt  astarte-gateway-pairing-helper.service.in  astarte-gateway.service  astartegatewaypairinghelper.cpp  astartegatewaypairinghelper.h  main.cpp
transports/http/: CMakeLists.txt  http.transport  http_parser.c  http_parser.h  httptransport.cpp  httptransport.h  httptransportcache.cpp  httptransportcache.h  httptransportcallback.cpp  httptransportcallback.h  httptransportcallbackhost.cpp  httptransportcallbackhost.h  httptransportcallbackmanager.cpp  httptransportcallbackmanager.h  hyperdrive-transport-http-home.conf  hyperdrive-transport-http-ssl-cert.service.in  hyperdrive-transport-http.service.in  transporttcpserver.cpp  transporttcpserver.h
transports/lib/: CMakeLists.txt  astartecrypto.cpp  astartecrypto.h  astartecrypto_p.h  astarteendpoint.cpp  astarteendpoint.h  astarteendpoint_p.h  astartegatewayendpoint.cpp  astartegatewayendpoint.h  astartegatewayendpoint_p.h  astartehttpendpoint.cpp  astartehttpendpoint.h  astartehttpendpoint_p.h  astarteverifycertificateoperation.cpp  astarteverifycertificateoperation.h  hyperdrivemqttclientwrapper.cpp  hyperdrivemqttclientwrapper.h  hyperdrivemqttclientwrapper_p.h  transportdatabasemanager.cpp  transportdatabasemanager.h
transports/mqtt/: CMakeLists.txt  hyperdrive-transport-mqtt.service.in  mqtttransport.cpp  mqtttransport.h
